# template-python

./: .editorconfig  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
src/: app.py
